load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_library(
    name = "math",
    srcs = ["math.cc"],
    hdrs = ["math.h"],
)

cc_binary(
    name = "hello",
    srcs = ["hello.cc"],
    deps = [":math"],
)

cc_test(
    name = "math_test",
    srcs = ["math_test.cc"],
    deps = [":math"],
)


