load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_library(
    name = "math",
    srcs = ["math.cc"],
    hdrs = ["math.h"],
)

cc_library(
    name = "fast_math_impl",
    srcs = ["fast_math.cc"],
    hdrs = ["math.h"],
)

cc_binary(
    name = "hello",
    srcs = ["hello.cc"],
    deps = select({
	"//config:fast_math": [":fast_math_impl"],
	"//conditions:default": [":math"]
    }),
)

cc_test(
    name = "math_test",
    srcs = ["math_test.cc"],
    deps = [":math"],
)


